[gd_scene load_steps=83 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/players/character.png" type="Texture" id=2]
[ext_resource path="res://addons/swipe-detector/swipe_detector.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "attack_down"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( -2.125, 134.88, 18.875, 23.125 ), Rect2( 16.875, 134.88, 16.375, 25.875 ), Rect2( 32.875, 134.88, 16.5, 25.875 ), Rect2( 48.625, 134.88, 17, 25.875 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "attack_left"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( -0.5, 229.011, 14.25, 23.75 ), Rect2( 14.125, 229.011, 22.125, 23.75 ), Rect2( 37.75, 229.011, 18.875, 23.75 ), Rect2( 58.5, 229.011, 19.375, 23.75 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack_right"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( -0.5, 198.503, 17.875, 23.125 ), Rect2( 17.25, 198.503, 20.75, 23.125 ), Rect2( 37.875, 198.503, 17.125, 23.125 ), Rect2( 55.5, 198.503, 17.25, 23.125 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack_up"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( -1.25, 164.639, 19.25, 23.5 ), Rect2( 17.25, 164.639, 19.75, 23.5 ), Rect2( 36.25, 164.639, 17.125, 23.5 ), Rect2( 54.125, 164.639, 16, 23.5 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "dead"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 82.1609, 136.033, 16.25, 23.75 ), Rect2( 101.036, 136.033, 17.25, 23.75 ), Rect2( 120.286, 136.033, 21.75, 23.75 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 0.5, 5.625, 15.625, 23.625 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 0.25, 102.212, 14.5, 23.375 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 1.25, 38.2248, 14.5, 22.125 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0.25, 69.327, 15.5, 23.875 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0.202375, 5.56188, 15.25, 23.125 ), Rect2( 16.4524, 5.56188, 16, 23.125 ), Rect2( 32.5774, 5.56188, 16.125, 23.125 ), Rect2( 48.4524, 5.56188, 16.25, 23.125 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( -0.0476246, 102.369, 14.75, 23.125 ), Rect2( 16.5774, 102.369, 14.375, 23.125 ), Rect2( 32.4524, 102.369, 14.125, 23.125 ), Rect2( 48.3274, 102.369, 14.375, 23.125 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 1.32738, 38.0392, 15.25, 23 ), Rect2( 17.5774, 38.0392, 14.125, 23 ), Rect2( 33.5774, 38.0392, 13.875, 23 ), Rect2( 49.2024, 38.0392, 14.375, 23 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 69.2968, 15.75, 24 ), Rect2( 16.2024, 69.2968, 15.875, 24 ), Rect2( 31.9524, 69.2968, 16, 24 ), Rect2( 47.8274, 69.2968, 16.375, 24 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "attack_down"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "attack_left"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "attack_right"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "attack_up"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "idle_down"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "idle_up"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "walk_down"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "walk_up"

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=48]

[sub_resource type="AnimationNodeStateMachineTransition" id=49]

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachineTransition" id=51]

[sub_resource type="AnimationNodeStateMachineTransition" id=52]

[sub_resource type="AnimationNodeStateMachineTransition" id=53]

[sub_resource type="AnimationNodeStateMachineTransition" id=54]

[sub_resource type="AnimationNodeStateMachineTransition" id=55]

[sub_resource type="AnimationNodeStateMachineTransition" id=56]

[sub_resource type="AnimationNodeStateMachineTransition" id=57]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=58]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=59]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=60]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=61]

[sub_resource type="AnimationNodeStateMachineTransition" id=62]

[sub_resource type="AnimationNodeStateMachineTransition" id=63]

[sub_resource type="AnimationNodeStateMachineTransition" id=64]

[sub_resource type="AnimationNodeStateMachineTransition" id=65]

[sub_resource type="AnimationNodeStateMachineTransition" id=66]

[sub_resource type="AnimationNodeStateMachineTransition" id=67]

[sub_resource type="AnimationNodeStateMachineTransition" id=68]

[sub_resource type="AnimationNodeStateMachineTransition" id=69]

[sub_resource type="AnimationNodeStateMachineTransition" id=70]

[sub_resource type="AnimationNodeStateMachineTransition" id=71]

[sub_resource type="AnimationNodeStateMachineTransition" id=72]

[sub_resource type="AnimationNodeStateMachineTransition" id=73]

[sub_resource type="AnimationNodeStateMachineTransition" id=74]

[sub_resource type="AnimationNodeStateMachine" id=75]
states/attack_down/node = SubResource( 14 )
states/attack_down/position = Vector2( 188, 412 )
states/attack_left/node = SubResource( 15 )
states/attack_left/position = Vector2( 131, 130 )
states/attack_right/node = SubResource( 16 )
states/attack_right/position = Vector2( 847, 157 )
states/attack_up/node = SubResource( 17 )
states/attack_up/position = Vector2( 306, 50 )
states/dead/node = SubResource( 18 )
states/dead/position = Vector2( 975, 50 )
states/idle_down/node = SubResource( 19 )
states/idle_down/position = Vector2( 452, 309 )
states/idle_left/node = SubResource( 20 )
states/idle_left/position = Vector2( 242, 221 )
states/idle_right/node = SubResource( 21 )
states/idle_right/position = Vector2( 651, 221 )
states/idle_up/node = SubResource( 22 )
states/idle_up/position = Vector2( 452, 130 )
states/walk_down/node = SubResource( 23 )
states/walk_down/position = Vector2( 625, 389 )
states/walk_left/node = SubResource( 24 )
states/walk_left/position = Vector2( 131, 296 )
states/walk_right/node = SubResource( 25 )
states/walk_right/position = Vector2( 768, 296 )
states/walk_up/node = SubResource( 26 )
states/walk_up/position = Vector2( 596, 44 )
transitions = [ "idle_left", "attack_left", SubResource( 27 ), "idle_left", "walk_left", SubResource( 28 ), "idle_left", "idle_down", SubResource( 29 ), "idle_left", "idle_up", SubResource( 30 ), "idle_left", "idle_right", SubResource( 31 ), "idle_down", "attack_down", SubResource( 32 ), "idle_down", "walk_down", SubResource( 33 ), "idle_down", "idle_right", SubResource( 34 ), "idle_down", "idle_left", SubResource( 35 ), "idle_down", "idle_up", SubResource( 36 ), "idle_right", "walk_right", SubResource( 37 ), "idle_right", "attack_right", SubResource( 38 ), "idle_right", "idle_up", SubResource( 39 ), "idle_right", "idle_down", SubResource( 40 ), "idle_right", "idle_left", SubResource( 41 ), "idle_up", "walk_up", SubResource( 42 ), "idle_up", "attack_up", SubResource( 43 ), "idle_up", "idle_left", SubResource( 44 ), "idle_up", "idle_right", SubResource( 45 ), "idle_up", "idle_down", SubResource( 46 ), "walk_right", "idle_right", SubResource( 47 ), "walk_down", "idle_down", SubResource( 48 ), "walk_down", "dead", SubResource( 49 ), "idle_down", "dead", SubResource( 50 ), "walk_right", "dead", SubResource( 51 ), "idle_right", "dead", SubResource( 52 ), "idle_left", "dead", SubResource( 53 ), "walk_left", "dead", SubResource( 54 ), "walk_up", "dead", SubResource( 55 ), "idle_up", "dead", SubResource( 56 ), "attack_left", "idle_left", SubResource( 57 ), "attack_up", "idle_up", SubResource( 58 ), "attack_right", "idle_right", SubResource( 59 ), "attack_down", "idle_down", SubResource( 60 ), "walk_left", "idle_left", SubResource( 61 ), "walk_up", "idle_up", SubResource( 62 ), "idle_left", "walk_down", SubResource( 63 ), "idle_left", "walk_up", SubResource( 64 ), "idle_left", "walk_right", SubResource( 65 ), "idle_down", "walk_left", SubResource( 66 ), "idle_down", "walk_up", SubResource( 67 ), "idle_down", "walk_right", SubResource( 68 ), "idle_right", "walk_down", SubResource( 69 ), "idle_right", "walk_left", SubResource( 70 ), "idle_right", "walk_up", SubResource( 71 ), "idle_up", "walk_left", SubResource( 72 ), "idle_up", "walk_down", SubResource( 73 ), "idle_up", "walk_right", SubResource( 74 ) ]
graph_offset = Vector2( 0, -17.7949 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=76]

[sub_resource type="RectangleShape2D" id=77]
extents = Vector2( 8.07408, 12.0741 )

[sub_resource type="RectangleShape2D" id=78]
extents = Vector2( 7.77779, 11.7778 )

[sub_resource type="RectangleShape2D" id=79]
extents = Vector2( 94.4923, 70.5019 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 4, 4 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1, 6, 14, 23 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/attack_down = SubResource( 1 )
anims/attack_left = SubResource( 2 )
anims/attack_right = SubResource( 3 )
anims/attack_up = SubResource( 4 )
anims/dead = SubResource( 5 )
anims/idle_down = SubResource( 6 )
anims/idle_left = SubResource( 7 )
anims/idle_right = SubResource( 8 )
anims/idle_up = SubResource( 9 )
anims/walk_down = SubResource( 10 )
anims/walk_left = SubResource( 11 )
anims/walk_right = SubResource( 12 )
anims/walk_up = SubResource( 13 )

[node name="AnimationTree" type="AnimationTree" parent="Sprite/AnimationPlayer"]
tree_root = SubResource( 75 )
anim_player = NodePath("..")
active = true
parameters/playback = SubResource( 76 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 77 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 78 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SwipeDetector" parent="." instance=ExtResource( 3 )]
process_method = "Fixed"

[node name="AttackArea" type="Area2D" parent="SwipeDetector"]
position = Vector2( -12.7806, 19.3943 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SwipeDetector/AttackArea"]
position = Vector2( 13.7538, -16.0376 )
scale = Vector2( 1.24476, 1 )
polygon = PoolVector2Array( 41.1, 22.37, 30.11, 40.87, 13.9, 52.3, -4.7, 54.69, -22.5, 47.63, -36.4, 32.32, -44.01, 11.43, -44.01, -11.43, -36.4, -32.32, -22.5, -47.63, -4.7, -54.69, 13.9, -52.3, 30.11, -40.87, 41.1, -22.37, 45, 0, 16.6962, 2.04705, 16.5464, -4.29339, 15.0483, -10.0744, 11.4527, -16.6013, 5.90955, -20.5175, -0.532493, -22.7553, -6.22546, -21.8229, -11.469, -18.6526, -15.9634, -12.6852, -17.3118, -6.15823, -18.0608, 1.11464, -17.0121, 7.45508, -14.4653, 13.7955, -10.7199, 18.2711, -5.32657, 19.9495, 0.965658, 20.3225, 7.25788, 18.2711, 12.052, 14.9144, 15.6475, 9.5064, 16.6962, 2.40486, 45.1611, 0.174648 )

[node name="SwipeArea" type="Area2D" parent="SwipeDetector"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwipeDetector/SwipeArea"]
shape = SubResource( 79 )
__meta__ = {
"_edit_lock_": true
}

[node name="name" type="Label" parent="."]
margin_left = -18.1189
margin_top = -72.3507
margin_right = 16.8811
margin_bottom = -58.3507
text = "josue"

[connection signal="pattern_detected" from="SwipeDetector" to="." method="_on_SwipeDetector_pattern_detected"]
[connection signal="swipe_ended" from="SwipeDetector" to="." method="_on_SwipeDetector_swipe_ended"]
[connection signal="swipe_failed" from="SwipeDetector" to="." method="_on_SwipeDetector_swipe_failed"]
[connection signal="swipe_started" from="SwipeDetector" to="." method="_on_SwipeDetector_swipe_started"]
[connection signal="swipe_updated" from="SwipeDetector" to="." method="_on_SwipeDetector_swipe_updated"]
[connection signal="swiped" from="SwipeDetector" to="." method="_on_SwipeDetector_swiped"]
